deployment-green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crypto-price-green
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crypto-price
      version: green
  template:
    metadata:
      labels:
        app: crypto-price
        version: green
    spec:
      containers:
      - name: crypto-price
        image: <your-ecr-repository-url>:latest
        ports:
        - containerPort: 8080
