service-blue.yaml
apiVersion: v1
kind: Service
metadata:
  name: crypto-price-service-blue
spec:
  selector:
    app: crypto-price
    version: blue
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
