service-green.yaml
apiVersion: v1
kind: Service
metadata:
  name: crypto-price-service-green
spec:
  selector:
    app: crypto-price
    version: green
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
